--- a/.example.env
+++ b/.example.env
@@ -4,4 +4,6 @@ PSQL_DB_NAME="gateway"
 PSQL_DB_PORT=5432
 PSQL_DB_HOST="localhost"
 
+REST_PORT=5000
 API_VERSION="v1"
+SECRET_KEY="Im1VR7885h363s48oZGaL4984"
